# merm

./: .gitignore  Makefile  README.md  bug-subgraph-edges.mmd  problem.md  pyproject.toml  visual-check-guide.md
.claude/agents/: product-manager.md  software-engineer.md  tester.md
benchmark/: README.md  run_benchmark.py
benchmark/results/: benchmark_20260306_061159.json
benchmark/scenarios/: large_chain_50.mmd  lr_complex.mmd  medium_branching.mmd  mixed_shapes.mmd  nested_subgraphs.mmd  small_linear.mmd  wide_fan.mmd
docs/: PROCESS.md  api.md  comparison_gallery.html  comparison_report.md  comparison_scores.json  plan.md  themes.md
docs/benchmarks/: README.md
docs/examples/: README.md
docs/tasks/: 07-svg-renderer-core.done.md  16-state-diagram.done.md  18-svg-visual-quality.done.md  23-disconnected-component-layout.done.md  26-horizontal-direction-layout-lr-rl.done.md  28-edge-label-overlap-and-positioning.done.md  30-text-missing-from-mmdc-reference.done.md  55-lr-subgraph-layout-broken.done.md  60-lr-flowchart-node-spacing.todo.md
docs/tracker/: 59-sequence-long-message-clipping.todo.md  61-sequence-activation-syntax-empty-svg.todo.md  62-sequence-arrows-svg-broken.todo.md  63-sequence-basic-oversized-arrows.todo.md  64-sequence-flink-diagrams-broken.todo.md  66-remove-reference-tests.todo.md  69-state-diagram-arrow-connection-issues.todo.md  70-er-diagram-too-large.todo.md  71-mutation-testing.todo.md  72-fuzz-testing.todo.md  73-edge-case-bug-hunting.todo.md  74-performance-benchmarks.todo.md  75-cli-tool.todo.md  76-python-api-improvements.todo.md  77-theme-customization.todo.md  81-theme-gallery.todo.md  (+15 more)
scripts/: generate_theme_gallery.py  regenerate_corpus_references.sh  regenerate_references.sh  render_comparison.py  render_examples.py  run_mutation_tests.sh
tasks/: 01-project-setup.done.md  01-project-setup.todo.md  02-comparison-test-infra.groomed.md  02-comparison-test-infra.md  03-intermediate-representation.done.md  03-intermediate-representation.md  04-flowchart-parser.groomed.md  04-flowchart-parser.todo.md  05-text-measurement.md  06-sugiyama-layout.groomed.md  06-sugiyama-layout.md  07-svg-renderer-core.todo.md  08-node-shape-renderers.md  09-edge-renderers.done.md  09-edge-renderers.todo.md  10-subgraph-support.todo.md  11-styling-support.done.md  11-styling-support.todo.md  12-cli-interface.done.md  12-cli-interface.todo.md  13-integration-tests.todo.md  14-sequence-diagram.todo.md  15-class-diagram.groomed.md  15-class-diagram.todo.md  16-state-diagram.todo.md  17-code-restructure.done.md  17-code-restructure.todo.md  18-svg-visual-quality.todo.md  19-comprehensive-comparison-tests.todo.md  20-font-awesome-icons.todo.md  21-visual-comparison.todo.md  22-node-sizing-and-text-rendering.groomed.md  22-node-sizing-and-text-rendering.todo.md  23-disconnected-component-layout.todo.md  24-self-loop-rendering.in-progress.md  24-self-loop-rendering.todo.md  25-arrowhead-and-edge-stroke-scaling.todo.md  27-subgraph-boundary-and-title-rendering.todo.md  29-inter-layer-spacing.todo.md  31-svg-emoji-support.in-progress.md  (+28 more)
tests/: comparison.py  mmdc-config.json  svg_utils.py  test_api.py  test_api_documentation.py  test_arrow_markers.py  test_arrow_node_gap.py  test_arrowhead_shortening.py  test_back_edge_routing.py  test_benchmarks.py  test_bidi_edge_offset.py  test_circle_cross_marker_gap.py  test_class_diagram_quality.py  test_classdiag.py  test_cli.py  test_comparison.py  test_corpus.py  test_corpus_rendering.py  test_cylinder_fill.py  test_cylinder_label_overlap.py  test_diamond_boundary.py  test_diamond_label_overlap.py  test_edge_case_rendering.py  test_edge_connection_gap.py  test_edge_endpoint_precision.py  test_edge_label_positioning.py  test_edge_stroke_scaling.py  test_edges.py  test_emoji.py  test_erdiag.py  test_fa_icon_spacing.py  test_flowchart_parser.py  test_flowchart_rendering_quality.py  test_fuzz_parsers.py  test_gantt.py  test_gh1_subgraph_edges.py  test_gh2_edge_label_overlap.py  test_gitgraph.py  test_gitgraph_theme.py  test_html_entity_escaping.py  (+48 more)
(+263 files in other folders)
