[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymermaid"
version = "0.1.0"
description = "Pure Python Mermaid diagram renderer"
requires-python = ">=3.10"

[project.optional-dependencies]
fonts = ["fonttools"]
png = ["Pillow"]

[project.scripts]
pymermaid = "pymermaid.cli:main"

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "mutmut>=3.5.0",
    "pillow>=12.1.1",
    "pytest",
    "ruff",
    "scikit-image>=0.25.2",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
markers = [
    "comparison: marks tests that compare pymermaid output against mmdc reference SVGs",
]

[tool.mutmut]
paths_to_mutate = ["src/pymermaid/render/svg.py", "src/pymermaid/render/edges.py", "src/pymermaid/render/shapes.py"]
tests_dir = ["tests/"]
also_copy = ["src/"]
pytest_add_cli_args = ["-x", "-q", "--ignore=tests/test_cli.py", "--ignore=tests/test_comparison.py", "--ignore=tests/test_corpus.py", "--ignore=tests/test_corpus_rendering.py", "--ignore=tests/test_flowchart_parser.py", "--ignore=tests/test_mutation_killing.py", "--ignore=tests/test_lr_subgraph_layout.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymermaid"]
